JBR-8587 jb/build/ResolveSymbolsTest/ResolveSymbolsRealEnv.java fails on Alpine